# lingchu-bot

./: .bumpversion.cfg  .bumpversion.toml  .dockerignore  .editorconfig  .env  .env.dev  .env.example  .env.prod  .env.prod.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  COPYING  Dockerfile  LICENSE-cc0  LICENSE-docs  README-zh.md  README.OLD.md  README.md  REUSE.toml  Repository-Policy.md  SECURITY.md  Taskfile.yml  bot.py  docker-compose.yml  doctor.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  (+7 more)
.agents/skills/available-skills/: SKILL.md
.agents/skills/delivery-loop/: SKILL.md
.agents/skills/design-prototyping/: SKILL.md
.agents/skills/engineering-workflow/: SKILL.md
.agents/skills/find-similar-functions/: SKILL.md
.agents/skills/frontend-quality/: SKILL.md
.agents/skills/fuzz/: SKILL.md
.agents/skills/interactive-runtime-debugging/: SKILL.md
.agents/skills/issue-planning/: SKILL.md
.agents/skills/prek/: SKILL.md
.agents/skills/product-thinking/: SKILL.md
.agents/skills/protocol-endpoint-operations/: SKILL.md
.agents/skills/rde-eval/: SKILL.md
.agents/skills/release-notes/: SKILL.md
.agents/skills/rule-research/: SKILL.md
.agents/skills/rule-validate/: SKILL.md
.agents/skills/rule-writing/: SKILL.md
.agents/skills/ship/: SKILL.md
.agents/skills/tool-workflows/: SKILL.md
.agents/skills/writing-guidelines/: SKILL.md
.codegraph/: .gitignore
.github/: .markdownlint.jsonc  CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  auto_assign.yml  boring-cyborg.yml  config.yml  dependabot.yml  issue-close-app.yml  labeler.yml  no-response.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  contact.md  correction.md  docs.yml  documentation_issue.md  enhancement.md  feature.yml  feature_request.md  优化增强.md  功能请求.md  对作者说.md  文档问题.md  纠错评议.md  错误报告.md
.github/actions/detect-changes/: action.yml
.github/note/: AGENTS-zh.md  CLA-zh.md  CODE_OF_CONDUCT-zh.md  CONTRIBUTING-zh.md  PULL_REQUEST_TEMPLATE-zh.md  Repository-Policy-zh.md  SECURITY-zh.md
.github/releases/: 0.0.1.md
.github/workflows/: Release.yml  auto-assign.yml  bump-version.yml  ci-builds.yml  ci.yml  clear-workflow.yml  docker.yml  docs.yml  format.yml  github-release.yml  issues.-top.yml  publish.yml  react-doctor.yml  version.yml  🎭-playwright.yml  🏷️-issues-top.yml  👥-auto-assign.yml  👷-ci-builds.yml  💤-stale.yml  📚-docs.yml  🚀-release.yml  🛡️-codeql.yml  🧪-ci.yml  🧪-frontend.yml  🧪-python.yml  🧹-clear-workflow.yml  🩺-react-doctor.yml
.husky/: commit-msg  post-commit  pre-commit  prepare-commit-msg
.husky/lib/: detect.sh  frontend.sh  markdown.sh  python.sh
.serena/: project.yml
.trae/: .gitignore  hooks.json
.trae/rules/: git-commit-message.md
.trae/skills/bug-hunt/: SKILL.md
.trae/skills/code-review/: SKILL.md
.trae/skills/frontend-polish/: SKILL.md
.turbo/preferences/: tui.json
apps/docs/: .gitignore  .remarkrc.json  README.md  components.json  eslint.config.mjs  next.config.mjs  package.json  playwright.config.ts  source.config.ts  tsconfig.json  vitest.config.ts
apps/web/: package.json
apps/web/app/: layout.tsx  (+1 more)
data/Groups/: ID.ini
docker/: _main.py  gunicorn_conf.py  smoke-test.py
docs/: index.md  project-policy.md
docs/developer-guide/: commit-style.md  gitnexus.md  i18n.md  introduction.md  testing-ci.md  workflow.md
docs/en/: index.md  project-policy.md
docs/guide/: index.md  markdown.md
docs/specs/: runtime-handle-defaults.md
docs/task-reports/: task-10-handle-config-generation-report.md
docs/user-guide/: commands.md  configuration.md  markdown.md  overview.md  quick-start.md  troubleshooting.md
schema/: bot_state.schema.json5  config.schema.json5
scripts/: check-wheel-entrypoints.py  ci_version_from_tag.py  ci_version_postcheck.py  ci_version_precheck.py  ci_version_write.py  clean-release-infra.sh  generate_handle_configs.py  mcp_admin.py  release_verify_version.py  setup.sh  verify_handle_configs.py
skills/available-skills/: SKILL.md
skills/hf-cli/: SKILL.md
skills/understand-knowledge/: SKILL.md
tests/: conftest.py  test_conftest.py  test_i18n.py  test_json_client.py  test_typed_command.py
tests/cli/: test_app.py  test_config_commands.py  test_import_isolation.py  test_nb_script.py
tests/client/: test_db_client.py  test_json_client.py
tests/command/: test_mute.py
tests/core/: test_async_utils.py  test_bot_state.py  test_config.py  test_handle_config_generation.py  test_handle_config_manager.py  test_handle_default_values.py  test_http_security.py  test_menu_config.py  test_mutable_settings.py  test_runtime_config.py  test_runtime_config_ai.py  test_schemas.py
tests/database/: test_blocklist.py  test_json5_ensure.py  test_json5_load_async.py  test_json5_store.py  test_mcp_authorization_migration.py  test_message_protocol_backfill_migration.py  test_orm_crud.py  test_registry_seed.py  test_toml_contract.py  test_toml_ensure.py  test_toml_load_async.py  test_toml_store.py
tests/hooks/: test_adapters.py  test_integration.py  test_interfaces.py  test_registry.py
tests/i18n/: conftest.py  test_gettext.py
tests/permissions/: test_bootstrap.py  test_permission_admin.py  test_permission_config.py  test_permission_service.py  test_permission_wrapper.py  test_platform_permissions.py  test_runtime_config.py  test_subject_policy.py
tests/repositories/: test_blocklist.py  test_mcp_authorization.py  test_message_store.py  test_permissions.py  test_registry_seed.py  test_scheduler_jobs.py
tests/services/: test_llm.py  test_message_store.py  test_messagestore.py  test_permissions.py  test_protocol_restart_feedback.py  test_scheduler.py
tests/smoke/: __init__.py  test_bot_startup.py  test_core_services.py  test_hook_registration.py
tests/start/: test_startup.py
tests/tools/: test_adapter_loader.py
tools/: __init__.py  adapter_loader.py
web/: .gitignore  package-lock.json
web/docs/: index.md
(+782 files in other folders)
