[project]
name = "nonebot-plugin-lingchu-bot"
version = "0.0.0.dev40"
# dynamic = ["version"]
description = "由NoneBot2驱动，面向多平台的管理机器人"
keywords = ["nonebot2", "nonebot", "bot", "cross-platform", "group-management"]
readme = "README.md"
license = "LGPL-3.0-or-later AND (GFDL-1.3-or-later OR CC-BY-SA-4.0) AND (CC0-1.0 OR CC-BY-SA-4.0) AND (MIT OR Apache-2.0)"
license-files = [
    "LICENSE-code",
    "LICENSE-docs",
    "LICENSE-cc0",
    "LICENSE-mit",
    "LICENSE-apache",
    "LICENSE-cc-by-sa",
    "CLA.md",
    "Repository-Policy.md",
]
requires-python = ">=3.12, <4.0"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Plugins",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
authors = [{ name = "xinvxueyuan", email = "xinvxueyuan@yeah.net" }]
maintainers = [{ name = "xinvxueyuan", email = "xinvxueyuan@yeah.net" }]
dependencies = [
    "psutil>=7.2.2",
    "jinja2>=3.1.6",
    "nonebot2[fastapi]>=2.5.0",
    "nonebot2[httpx]>=2.4.4",
    "nonebot2[websockets]>=2.4.4",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot-plugin-orm[aiosqlite]>=0.8.3",
    "nonebot-plugin-alconna>=0.62.0",
    "nonebot-adapter-onebot>=2.4.6",
    # "nonebot-adapter-github>=0.6.0",
    # "nonebot-adapter-discord>=1.1.3",
    # "nonebot-adapter-telegram>=0.1.0b20",
    "nonebot-plugin-docs>=2.5.0",
    # "nonebot-plugin-sentry>=2.0.0",
    "aiofiles>=25.1.0",
    "json5>=0.14.0",
    "babel>=2.18.0",
    "nonebot-plugin-htmlkit>=0.1.0rc5",
    "rtoml>=0.13.0",
    "arrow>=1.4.0",
    "typer>=0.25.1",
    "openai>=2.38.0",
    "packaging>=24.2",
    "jsonschema>=4.23.0",
    "litellm>=1.83.3",
]

[project.urls]
Homepage = "https://lingchu.zone.id/"
Documentation = "https://lingchu.zone.id/"
Repository = "https://github.com/xinvxueyuan/lingchu-bot"
Issues = "https://github.com/xinvxueyuan/lingchu-bot/issues"

[dependency-groups]
dev = [
    { include-group = "script" },
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "git" },
]
script = ["poethepoet>=0.44.0"]
git = [
    # "bump-my-version>=1.3.0",
    "prek>=0.3.8",
]
lint = ["ruff>=0.15.10", "pyright>=1.1.407", "ty>=0.0.32"]
test = [
    "nb-cli>=1.4.0",
    "nonebug>=0.4.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-check>=2.8.0",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=7.1.0",
    "pytest-fastapi>=0.1.0",
    "pytest-httpx>=0.36.2",
    "pytest-icdiff>=0.9",
    "pytest-instafail>=0.5.0",
    "pytest-json>=0.4.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "pytest-socket>=0.7.0",
    "pytest-sqlalchemy>=0.3.0",
    "pytest-sugar>=1.1.1",
    "pytest-timeout>=2.4.0",
    "respx>=0.23.1",
    # Multi-database testing drivers (SQLALCHEMY_DATABASE_URL).
    # cryptography is required by pymysql/aiomysql for MySQL 8 caching_sha2_password
    # auth and by oracledb for TLS.
    "psycopg[binary]>=3.2.4", # PostgreSQL
    "aiomysql>=0.2.0",        # MySQL and MariaDB (SQLAlchemy auto-detects dialect)
    "cryptography>=43.0.0",   # pymysql/aiomysql/oracledb auth
    "oracledb>=2.0.0",        # Oracle Thin mode (no Oracle Client required)
    "aioodbc>=0.5.0",         # SQL Server async ODBC
    # aioodbc depends on pyodbc, which needs system ODBC drivers:
    # - Linux: msodbcsql18 (apt; CI installs via ACCEPT_EULA=Y)
    # - macOS: msodbcsql18 (brew)
    # - Windows: built-in (no extra install)
]


# [tool.poe.tasks]

[tool.nonebot]
plugin_dirs = ["src/plugins"]

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
# nonebot-adapter-github = [
#     { name = "GitHub", module_name = "nonebot.adapters.github" },
# ]
# nonebot-adapter-telegram = [
#     { name = "Telegram", module_name = "nonebot.adapters.telegram" },
# ]
# nonebot-adapter-discord = [
#     { name = "Discord", module_name = "nonebot.adapters.discord" },
# ]
"@local" = []

[tool.nonebot.plugins]
nonebot-plugin-apscheduler = ["nonebot_plugin_apscheduler"]
nonebot-plugin-localstore = ["nonebot_plugin_localstore"]
nonebot-plugin-orm = ["nonebot_plugin_orm"]
nonebot-plugin-alconna = ["nonebot_plugin_alconna"]
nonebot-plugin-htmlkit = ["nonebot_plugin_htmlkit"]
nonebot-plugin-docs = ["nonebot_plugin_docs"]
# nonebot-plugin-sentry = ["nonebot_plugin_sentry"]
"@local" = []

[tool.ruff]
line-length = 88
target-version = "py313"
# skills 排除列表同步至 prek.toml
extend-exclude = ["skills", ".agents/skills", ".claude/skills", ".trae/skills"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
# For more rules, see https://docs.astral.sh/ruff/rules/.
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "I",     # isort
    "C90",   # mccabe
    "N",     # pep8-naming
    "PL",    # pylint
    "UP",    # pyupgrade
    "YTT",   # flake8-2020
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "SLOT",  # flake8-slots
    "TID",   # flake8-tidy-imports
    "TC",    # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    # "ERA",   # eradicate
    "FAST", # FastAPI
    "PERF", # Perflint
    "PGH",  # pygrep-hooks
    "FURB", # refurb
    "TRY",  # tryceratops
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E402",  # module-import-not-at-top-of-file  # nonebot2 require() violates this
    "B008",  # function-call-in-default-argument  # nonebot2 Depends() without Annotated violates this
    "UP037", # quoted-annotation
    # "RUF001",  # ambiguous-unicode-character-string
    # "RUF002",  # ambiguous-unicode-character-docstring
    # "RUF003",  # ambiguous-unicode-character-comment
    # "ANN201",  # missing-return-type-undocumented-public-function
    "ANN202",  # missing-return-type-private-function
    "ANN401",  # any-type
    "COM812",  # missing-trailing-comma
    "PLC0415", # import-outside-top-level
    "TID252",  # prefer-absolute-imports
]
allowed-confusables = [
    "，",
    "。",
    "“",
    "”",
    "：",
    "；",
    "？",
    "！",
    "【",
    "】",
    "《",
    "》",
    "…",
    "—",
    "（",
    "）",
    "、",
]

[tool.ruff.lint.per-file-ignores]
# pytest fixtures may not be used directly in test functions but are still required for setup
"tests/**" = [
    "ARG002",  # unused-argument
    "ANN201",  # missing-return-type-undocumented-public-function (tests don't need explicit return types)
    "PLR2004", # magic-value-comparison (tests often use magic values for assertions)
    "E501",    # line-too-long (test assertions can be verbose)
    "F841",    # unused-variable (fixtures may assign variables for clarity)
    "TC005",   # empty-type-checking-block (test files may have empty TYPE_CHECKING blocks)
]
# utility scripts use print for diagnostic output
"scripts/**" = [
    "T201",    # print-found
    "C901",    # function-is-too-complex
    "PLR0915", # too-many-statements
    "BLE001",  # blind-exception
    "E501",    # line-too-long
    "F541",    # f-string-without-placeholders
]
# handle handlers may have complex logic with multiple return paths
"src/plugins/nonebot_plugin_lingchu_bot/handle/**/adapters/onebot11/default/**.py" = [
    "PLR0911", # too-many-return-statements (complex permission and privilege checks)
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
# For Pylance/Pyright configurations, see https://microsoft.github.io/pyright/#/configuration.
pythonVersion = "3.13"
pythonPlatform = "All"
typeCheckingMode = "standard"
include = ["src", "tests"]
# skills 排除列表同步至 prek.toml
exclude = [
    "skills",
    ".agents/skills",
    ".claude/skills",
    ".trae/skills",
    "apps",
    "packages",
    "docker",
    ".venv",
    "node_modules",
    ".cache",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
    ".pyright",
    "tmp",
]

[tool.ty.src]
# skills 排除列表同步至 prek.toml
exclude = [
    "skills/",
    ".agents/skills/",
    ".claude/skills/",
    ".trae/skills/",
    "apps/",
    "packages/",
    "docker/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
timeout = 300
timeout_method = "thread"
filterwarnings = [
    "ignore:No path_separator found in configuration:DeprecationWarning:alembic.config",
    "ignore:The version_path_separator configuration parameter is deprecated:DeprecationWarning:alembic.config",
]

# TODO: add build system configuration
[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-name = "nonebot_plugin_lingchu_bot"
module-root = "src/plugins"
# version = { source = "git" }

# [project.scripts]
# TODO: add command line entry point
# lcbot = ""
