[project]
name = "nonebot-plugin-lingchu-bot"
version = "0.0.0.dev40"
# dynamic = ["version"]
description = "由NoneBot2驱动，面向多平台的管理机器人"
keywords = ["nonebot2", "nonebot", "bot", "cross-platform", "group-management"]
readme = "README.md"
license = "LGPL-3.0-or-later AND (GFDL-1.3-or-later OR CC-BY-SA-4.0) AND (CC0-1.0 OR CC-BY-SA-4.0) AND (MIT OR Apache-2.0)"
license-files = [
    "LICENSE-code",
    "LICENSE-docs",
    "LICENSE-cc0",
    "LICENSE-mit",
    "LICENSE-apache",
    "LICENSE-cc-by-sa",
    "CLA.md",
    "Repository-Policy.md",
]
requires-python = ">=3.12, <4.0"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Plugins",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
authors = [{ name = "xinvxueyuan", email = "xinvxueyuan@yeah.net" }]
maintainers = [{ name = "xinvxueyuan", email = "xinvxueyuan@yeah.net" }]
dependencies = [
    "nonebot2[fastapi]>=2.5.0",
    "nonebot2[httpx]>=2.4.4",
    "nonebot2[websockets]>=2.4.4",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot-plugin-orm[aiosqlite]>=0.8.3",
    "nonebot-plugin-alconna>=0.62.0",
    "nonebot-adapter-onebot>=2.4.6",
    "aiofiles>=25.1.0",
    "babel>=2.18.0",
    "rtoml>=0.13.0",
    "packaging>=24.2",
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
ai = [
    "openai>=2.38.0",
    "litellm>=1.83.3",
]
novelai = [
    "msgpack>=1.1.1",
    "nonebot-plugin-lingchu-bot[ai]",
]
webui = [
    "nonebot-plugin-htmlkit>=0.1.0rc5",
    "jinja2>=3.1.6",
]
docs = [
    "nonebot-plugin-docs>=2.5.0",
]

[project.urls]
Homepage = "https://lingchu.zone.id/"
Documentation = "https://lingchu.zone.id/"
Repository = "https://github.com/xinvxueyuan/lingchu-bot"
Issues = "https://github.com/xinvxueyuan/lingchu-bot/issues"

[dependency-groups]
dev = [
    { include-group = "script" },
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "git" },
]
script = ["poethepoet>=0.44.0"]
git = [
    # "bump-my-version>=1.3.0",
    "prek>=0.4.4",
]
lint = ["ruff>=0.15.21", "pyright>=1.1.410", "ty>=0.0.58"]
test = [
    "nb-cli>=1.4.0",
    "nonebug>=0.4.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-check>=2.8.0",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=7.1.0",
    "pytest-fastapi>=0.1.0",
    "pytest-httpx>=0.36.2",
    "pytest-icdiff>=0.9",
    "pytest-instafail>=0.5.0",
    "pytest-json>=0.4.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "pytest-socket>=0.7.0",
    "pytest-sqlalchemy>=0.3.0",
    "pytest-sugar>=1.1.1",
    "pytest-timeout>=2.4.0",
    "respx>=0.23.1",
    # Multi-database testing drivers (SQLALCHEMY_DATABASE_URL).
    # cryptography is required by pymysql/aiomysql for MySQL 8 caching_sha2_password
    # auth and by oracledb for TLS.
    "psycopg[binary]>=3.2.4", # PostgreSQL
    "aiomysql>=0.2.0",        # MySQL and MariaDB (SQLAlchemy auto-detects dialect)
    "cryptography>=43.0.0",   # pymysql/aiomysql/oracledb auth
    "oracledb>=2.0.0",        # Oracle Thin mode (no Oracle Client required)
    "aioodbc>=0.5.0",         # SQL Server async ODBC
    # aioodbc depends on pyodbc, which needs system ODBC drivers:
    # - Linux: msodbcsql18 (apt; CI installs via ACCEPT_EULA=Y)
    # - macOS: msodbcsql18 (brew)
    # - Windows: built-in (no extra install)
]


# [tool.poe.tasks]

[tool.nonebot]
plugin_dirs = ["src/plugins"]

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
"@local" = []

[tool.nonebot.plugins]
nonebot-plugin-apscheduler = ["nonebot_plugin_apscheduler"]
nonebot-plugin-localstore = ["nonebot_plugin_localstore"]
nonebot-plugin-orm = ["nonebot_plugin_orm"]
nonebot-plugin-alconna = ["nonebot_plugin_alconna"]
"@local" = []

[tool.ruff]
line-length = 88
target-version = "py313"
# skills 排除列表同步至 prek.toml
extend-exclude = ["skills", ".agents/skills", ".claude/skills", ".trae/skills"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
# For more rules, see https://docs.astral.sh/ruff/rules/.
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "I",     # isort
    "C90",   # mccabe
    "N",     # pep8-naming
    "PL",    # pylint
    "UP",    # pyupgrade
    "YTT",   # flake8-2020
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "D",     # pydocstyle
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "SLOT",  # flake8-slots
    "TID",   # flake8-tidy-imports
    "TC",    # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    # "ERA",   # eradicate
    "FAST", # FastAPI
    "PERF", # Perflint
    "PGH",  # pygrep-hooks
    "FURB", # refurb
    "TRY",  # tryceratops
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E402",  # module-import-not-at-top-of-file  # nonebot2 require() violates this
    "B008",  # function-call-in-default-argument  # nonebot2 Depends() without Annotated violates this
    "UP037", # quoted-annotation
    # "RUF001",  # ambiguous-unicode-character-string
    # "RUF002",  # ambiguous-unicode-character-docstring
    # "RUF003",  # ambiguous-unicode-character-comment
    # "ANN201",  # missing-return-type-undocumented-public-function
    "ANN202",  # missing-return-type-private-function
    "ANN401",  # any-type
    "COM812",  # missing-trailing-comma
    "PLC0415", # import-outside-top-level
    "TID252",  # prefer-absolute-imports
    # pydocstyle (D) ignores
    "D100",  # missing-module-docstring (modules don't need docstrings)
    "D104",  # missing-public-class-docstring (packages don't need docstrings)
    "D105",  # missing-magic-method-docstring (magic methods don't need docstrings)
    "D107",  # missing-__init__-docstring (__init__ doesn't need docstrings)
    "D203",  # one-blank-line-before-class (conflicts with Google convention)
    "D212",  # multi-line-summary-first-line (conflicts with D213, we want D213)
    "D400",  # ends-in-period (too strict for CJK content)
    "D415",  # ends-in-punctuation (too strict for CJK content)
    # missing-docstring rules: too many existing public symbols lack docstrings
    # to retrofit at once. D rules still enforce style on EXISTING docstrings.
    "D101",  # missing-public-class-docstring
    "D102",  # missing-public-method-docstring
    "D103",  # missing-public-function-docstring
]
allowed-confusables = [
    "，",
    "。",
    "“",
    "”",
    "：",
    "；",
    "？",
    "！",
    "【",
    "】",
    "《",
    "》",
    "…",
    "—",
    "（",
    "）",
    "、",
]

[tool.ruff.lint.per-file-ignores]
# pytest fixtures may not be used directly in test functions but are still required for setup
"tests/**" = [
    "ARG002",  # unused-argument
    "ANN201",  # missing-return-type-undocumented-public-function (tests don't need explicit return types)
    "PLR2004", # magic-value-comparison (tests often use magic values for assertions)
    "E501",    # line-too-long (test assertions can be verbose)
    "F841",    # unused-variable (fixtures may assign variables for clarity)
    "TC005",   # empty-type-checking-block (test files may have empty TYPE_CHECKING blocks)
    # pydocstyle (D) ignores for tests
    "D100",  # missing-module-docstring
    "D101",  # missing-public-class-docstring
    "D102",  # missing-public-method-docstring
    "D103",  # missing-public-function-docstring
]
# utility scripts use print for diagnostic output
"scripts/**" = [
    "T201",    # print-found
    "C901",    # function-is-too-complex
    "PLR0915", # too-many-statements
    "BLE001",  # blind-exception
    "E501",    # line-too-long
    "F541",    # f-string-without-placeholders
]
# handle handlers may have complex logic with many return paths and NoneBot-mandated parameters
"src/plugins/nonebot_plugin_lingchu_bot/handle/**/adapters/onebot11/default/**.py" = [
    "PLR0911",  # too-many-return-statements (complex permission and privilege checks)
    "PLR0913",  # too-many-arguments (NoneBot handler + OneBot API signatures)
]
# schemas.py embeds JSON Schema strings with intentionally long lines for editor readability
"src/plugins/nonebot_plugin_lingchu_bot/core/schemas.py" = [
    "E501",  # line-too-long: embedded JSON Schema strings intentionally use long lines
]

# TC001/TC002/TC003: NoneBot evaluates forward references at hook registration time;
# these runtime imports must not be hidden behind TYPE_CHECKING
"src/plugins/nonebot_plugin_lingchu_bot/hooks/handlers/message_store.py" = ["TC002"]
"src/plugins/nonebot_plugin_lingchu_bot/hooks/handlers/bot_connection.py" = ["TC002"]
"src/plugins/nonebot_plugin_lingchu_bot/database/models/scheduler.py" = ["TC003"]
"src/plugins/nonebot_plugin_lingchu_bot/database/models/subject_policy.py" = ["TC003"]
"src/plugins/nonebot_plugin_lingchu_bot/database/models/blocklist.py" = ["TC003"]
"src/plugins/nonebot_plugin_lingchu_bot/database/models/registry.py" = ["TC003"]
"src/plugins/nonebot_plugin_lingchu_bot/database/models/identity.py" = ["TC003"]

# ARG001: NoneBot handler signatures require bot/event params even when unused
"src/plugins/nonebot_plugin_lingchu_bot/handle/qq/adapters/onebot11/napcat/announcement.py" = ["ARG001"]
"src/plugins/nonebot_plugin_lingchu_bot/handle/qq/adapters/onebot11/default/bot_state.py" = ["ARG001"]

# TRY003/TRY004: vanilla exceptions (ValueError/TypeError) are intentional for validation
"src/plugins/nonebot_plugin_lingchu_bot/core/menu_config.py" = ["TRY003"]
"src/plugins/nonebot_plugin_lingchu_bot/core/handle_config_manager.py" = ["TRY003", "BLE001"]
"src/plugins/nonebot_plugin_lingchu_bot/core/handle_config_defaults/__init__.py" = ["TRY003"]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/novelai_image/models.py" = ["TRY003"]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/novelai_image/tipo.py" = ["TRY003"]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/novelai_image/intent.py" = ["TRY003"]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/novelai_image/client.py" = ["TRY003"]
"src/plugins/nonebot_plugin_lingchu_bot/database/orm_crud/_base.py" = ["TRY003"]
"src/plugins/nonebot_plugin_lingchu_bot/database/toml_store/_helpers.py" = ["TRY003"]

# BLE001: startup/probe code uses intentional fail-closed/fail-soft exception handling
"src/plugins/nonebot_plugin_lingchu_bot/core/bot_state.py" = ["BLE001"]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/novelai_image/search.py" = ["BLE001"]
"src/plugins/nonebot_plugin_lingchu_bot/services/llm.py" = ["BLE001"]
"src/plugins/nonebot_plugin_lingchu_bot/services/protocol_restart_feedback.py" = ["BLE001"]
"src/plugins/nonebot_plugin_lingchu_bot/start/startup.py" = ["BLE001"]
"src/plugins/nonebot_plugin_lingchu_bot/platforms/qq/permissions.py" = ["BLE001"]
"src/plugins/nonebot_plugin_lingchu_bot/database/toml_store/_async_db.py" = ["TRY003", "BLE001"]

# PLW0603: module-level state management is an established pattern in this codebase
"src/plugins/nonebot_plugin_lingchu_bot/handle/menu.py" = ["PLW0603"]

# C901/PLR0911: complex functions that are difficult to split without losing readability
"src/plugins/nonebot_plugin_lingchu_bot/hooks/adapters.py" = ["C901", "PLR0911"]

# PLR0913: parameter-heavy write/audit and CRUD APIs (request object refactoring is a follow-up task)
"src/plugins/nonebot_plugin_lingchu_bot/repositories/blocklist.py" = ["PLR0913"]
"src/plugins/nonebot_plugin_lingchu_bot/repositories/message_store.py" = ["PLR0913"]
"src/plugins/nonebot_plugin_lingchu_bot/permissions/subject_policy.py" = ["PLR0913"]

# Combined entries for files needing multiple rule suppressions
"src/plugins/nonebot_plugin_lingchu_bot/core/runtime_config.py" = [
    "TRY003",  # vanilla exceptions for config validation
    "TRY004",  # TypeError for invalid config types
    "PLW0603",  # module-level state management
    "C901",  # complex validation logic
]
"src/plugins/nonebot_plugin_lingchu_bot/repositories/scheduler_jobs.py" = [
    "PLR0913",  # parameter-heavy job spec API
    "TRY003",  # vanilla exceptions for validation
    "TRY004",  # TypeError for invalid types
]
"src/plugins/nonebot_plugin_lingchu_bot/repositories/permissions.py" = [
    "TC001",  # runtime type imports needed by NoneBot
    "TC003",  # runtime stdlib imports needed by NoneBot
    "PLR0913",  # parameter-heavy identity group API
]
"src/plugins/nonebot_plugin_lingchu_bot/services/scheduler.py" = [
    "PLR0913",  # parameter-heavy scheduler API
    "TRY003",  # vanilla exceptions for validation
]
"src/plugins/nonebot_plugin_lingchu_bot/database/orm_crud/_bulk.py" = [
    "TC003",  # runtime stdlib imports needed by NoneBot
    "TRY003",  # vanilla exceptions for CRUD validation
    "PLR0913",  # parameter-heavy generic CRUD functions
]
"src/plugins/nonebot_plugin_lingchu_bot/database/orm_crud/_single.py" = [
    "TRY003",  # vanilla exceptions for CRUD validation
    "TC003",  # runtime stdlib imports needed by NoneBot
]
"src/plugins/nonebot_plugin_lingchu_bot/permissions/bootstrap.py" = [
    "TC001",  # runtime type imports needed by NoneBot
    "TC003",  # runtime stdlib imports needed by NoneBot
    "TRY003",  # vanilla exceptions for validation
]
"src/plugins/nonebot_plugin_lingchu_bot/permissions/admin.py" = [
    "TC001",  # runtime type imports needed by NoneBot
    "TC003",  # runtime stdlib imports needed by NoneBot
    "TRY003",  # vanilla exceptions for validation
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
# For Pylance/Pyright configurations, see https://microsoft.github.io/pyright/#/configuration.
pythonVersion = "3.13"
pythonPlatform = "All"
typeCheckingMode = "standard"
include = ["src", "tests"]
# skills 排除列表同步至 prek.toml
exclude = [
    "skills",
    ".agents/skills",
    ".claude/skills",
    ".trae/skills",
    "apps",
    "packages",
    "docker",
    ".venv",
    "node_modules",
    ".cache",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
    ".pyright",
    "tmp",
]

[tool.ty.src]
# skills 排除列表同步至 prek.toml
exclude = [
    "skills/",
    ".agents/skills/",
    ".claude/skills/",
    ".trae/skills/",
    "apps/",
    "packages/",
    "docker/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
timeout = 300
timeout_method = "thread"
filterwarnings = [
    "ignore:No path_separator found in configuration:DeprecationWarning:alembic.config",
    "ignore:The version_path_separator configuration parameter is deprecated:DeprecationWarning:alembic.config",
]

# TODO: add build system configuration
[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-name = "nonebot_plugin_lingchu_bot"
module-root = "src/plugins"
# version = { source = "git" }

# [project.scripts]
# TODO: add command line entry point
# lcbot = ""
